Follow up fix for field options ui issue on firefox, safari, and edge

--- a/src/components/field-options/_field-options-new.scss
+++ b/src/components/field-options/_field-options-new.scss
@@ -188,7 +188,6 @@
 
     .colorpicker-container ~ .btn-actions {
       left: -12px !important;
-      top: -13px !important;
     }
   }
 
