--- a/src/components/field-options/_field-options.scss
+++ b/src/components/field-options/_field-options.scss
@@ -699,7 +699,7 @@
     .colorpicker-container {
       ~ .btn-actions {
         left: -11px;
-        top: -14px;
+        top: -10px;
       }
     }
 
@@ -813,6 +813,14 @@
     .field-options {
       ~ .btn-actions:not(.is-checkbox) {
         top: auto;
+      }
+    }
+
+    .searchfield-wrapper {
+      input.field-options {
+        ~ .btn-actions.btn-menu {
+          top: 0;
+        }
       }
     }
 
